--- a/web/css/general.css
+++ b/web/css/general.css
@@ -88,18 +88,62 @@ body {
   list-style-type: none;
 }
 
-.main-nav-list li a {
+.main-nav-link {
+  text-decoration: none;
   font-weight: 700;
-  font-size: 3rem;
-  margin-bottom: 3rem;
+  font-size: 1.8rem;
   color: #333;
   text-decoration: none;
+  transition: all 0.5s;
+}
+
+.main-nav-link:hover {
+  /* transform: scale(1.1); */
+  /* transform: translateY(-0.5rem); */
+  color: #9e58f9;
+}
+
+.main-nav-link.nav-cta {
+  background-color: #9e58f9;
+  padding: 1.2rem 2.4rem;
+  text-decoration: none;
+  font-weight: 700;
+  font-size: 1.8rem;
+  border-radius: 1rem;
+  color: #fff;
+  text-decoration: none;
+  transition: all 0.3s;
+}
+
+.main-nav-link.nav-cta:hover {
+  /* transform: scale(1.1); */
+  /* transform: translateY(-0.5rem); */
+  background-color: #7e46c7;
+}
+
+/* MOBILE */
+.btn-mobile-nav {
+  border: none;
+  background: none;
+  cursor: pointer;
+  display: none;
+}
+
+.icon-mobile-nav {
+  height: 4.8rem;
+  width: 4.8rem;
+  color: #333;
+}
+
+.icon-mobile-nav[name="close-outline"] {
+  display: none;
 }
 
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: relative;
   padding: 2rem 2rem;
 }
 
